[tool.poetry]
name = "nfl-big-data-bowl-2023"
version = "0.1.0"
description = ""
authors = ["ethan-stone <ethan.stone9352@gmail.com>"]
readme = "README.md"
packages = [{include = "nfl_big_data_bowl_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
